# soup-api

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
_scripts/: release.sh  run.sh
core/: api.py  asgi.py  settings.py  tests.py  urls.py  wsgi.py
kitchen/: admin.py  api.py  models.py  tests.py
kitchen/api/: drafts.py  ingredients.py  recipes.py  schemes.py  units.py
kitchen/api/appliances/: api.py  schemes.py
kitchen/migrations/: 0001_initial.py  0002_initial.py  0003_rename_name_recipe_title.py  0004_alter_unit_abbreviation_alter_unit_name.py  0005_remove_recipe_instructions_instruction.py  0006_alter_ingredient_image_alter_recipe_image.py  0007_recipe_visibility.py  0008_alter_instruction_options.py  0009_recipe_is_draft.py  0010_recipe_slug_alter_recipe_title.py  0011_mark_existing_resipes_as_finished.py  0012_slugify_titles.py  0013_appliancetype_manufacturer_appliance.py  0014_alter_appliance_uid_alter_appliancetype_uid_and_more.py  0015_recipe_appliances.py
kitchen/tests/: conftest.py  factories.py  test_models.py
kitchen/tests/api/: test_appliances.py  test_ingredients.py  test_recipes.py  test_units.py
shared/: models.py  schemes.py
users/: api.py  auth_backend.py  authentication.py  models.py  tests.py
users/api/: auth.py  schemes.py  users.py
users/migrations/: 0001_initial.py  0002_customuser_handler_alter_customuser_first_name_and_more.py  0003_alter_customuser_uid.py
users/tests/: factories.py  test_auth.py  test_users.py
